#35 disabling warnings for generated code, fixing reflection deprecation